--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "~3.5.13",
+    "eslint": "~9.17.0",
+    "@vue/eslint-config-typescript": "~14.2.0",
+    "prettier": "~3.4.2"
+
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
