--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "vue": "~3.5.13",
     "eslint": "~9.17.0",
     "@vue/eslint-config-typescript": "~14.2.0",
-    "prettier": "~3.4.2"
-
+    "prettier": "~3.4.2",
+    "vuetify": "~3.7.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
