--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.ts,.vue src",
   },
   "dependencies": {
     "vue": "~3.5.13",
-    "eslint": "~9.17.0",
-    "@vue/eslint-config-typescript": "~14.2.0",
+    "eslint": "~9.18.0",
     "prettier": "~3.4.2",
     "vuetify": "~3.7.6",
     "@mdi/js": "~7.4.47"
   },
   "devDependencies": {
+    "@eslint/js": "~9.18.0",
+    "eslint-plugin-oxlint": "~0.15.6",
+    "eslint-plugin-vue": "~9.32.0",
+    "@vue/eslint-config-typescript": "^14.3.0",
+    "eslint-config-prettier": "~10.0.1",
+
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.6.2",
