--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.ts,.vue src",
+    "lint": "eslint src"
   },
   "dependencies": {
     "vue": "~3.5.13",
