--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-vue": "~9.32.0",
     "@vue/eslint-config-typescript": "^14.3.0",
     "eslint-config-prettier": "~10.0.1",
+    "globals": "~15.14.0",
 
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
