--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "break_eternity.js": "^2.1.1",
     "vue": "~3.5.13",
     "eslint": "~9.18.0",
     "prettier": "~3.4.2",
