--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "break_eternity.js": "^2.1.1",
+    "path": "^0.12.7",
     "vue": "~3.5.13",
-    "eslint": "~9.18.0",
+    "eslint": "~9.19.0",
     "prettier": "~3.4.2",
-    "vuetify": "~3.7.6",
+    "vuetify": "~3.7.9",
     "@mdi/js": "~7.4.47"
   },
   "devDependencies": {
-    "@eslint/js": "~9.18.0",
-    "eslint-plugin-oxlint": "~0.15.6",
+    "@eslint/js": "~9.19.0",
+    "eslint-plugin-oxlint": "~0.15.8",
     "eslint-plugin-vue": "~9.32.0",
     "@vue/eslint-config-typescript": "^14.3.0",
     "eslint-config-prettier": "~10.0.1",
@@ -27,8 +28,8 @@
 
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.5",
+    "typescript": "~5.6.3",
+    "vite": "^6.0.11",
     "vue-tsc": "^2.2.0"
   }
 }
