--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "paths": {
       "@/*": ["src/*"],
     },
-    "types": ["vite", "node"],
+    "types": ["vite"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
