--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@types/node": "^22.12.0",
     "break_eternity.js": "^2.1.1",
     "path": "^0.12.7",
     "vue": "~3.5.13",
