--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "vue": "~3.5.13",
+    "@vueuse/core": "~12.5.0",
     "@types/node": "^22.12.0",
     "break_eternity.js": "^2.1.1",
     "path": "^0.12.7",
-    "vue": "~3.5.13",
     "eslint": "~9.19.0",
     "prettier": "~3.4.2",
     "vuetify": "~3.7.9",
