--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "allowSyntheticDefaultImports": true,
   },
   "exclude": ["node_modules"],
   "include": ["vite.config.ts", "**/*.ts", "**/*.vue"],
