--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "exclude": ["node_modules"],
   "include": ["vite.config.ts", "**/*.ts", "**/*.vue"],
