--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "driver.js": "^1.3.5",
     "vue": "~3.5.13",
     "@vueuse/core": "~12.5.0",
     "@types/node": "^22.12.0",
