--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "driver.js": "^1.3.5",
+    "pinia": "^3.0.1",
     "vue": "~3.5.13",
     "@vueuse/core": "~12.5.0",
     "@types/node": "^22.12.0",
